<resources>
    <string name="app_name">RxJavaSample</string>
    <string name="multiple_taps_demo">Multiple Taps demo</string>
    <string name="registration_demo">Registration Demo</string>
    <string name="email">Email</string>
    <string name="email_exist_alert">Email already exist</string>
    <string name="password">Password</string>
    <string name="password_minimal_alert">your password is to short</string>
    <string name="confirm_password">confirm password</string>
    <string name="password_confirmation_not_match">password it\'s not match</string>
    <string name="submit">submit</string>
    <string name="base_url">https://private-7cba43-androidrxdemo.apiary-mock.com/</string>
    <string name="double_tap_total">double tab total</string>
    <string name="tap_me">Tap me</string>
</resources>
