<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="phone.nikolas.com.rxjavasample.RegistrationDemoActivity">

    <data>
        <import type="android.view.View" />

        </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            />
        <TextView
            android:id="@+id/text_email_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff000000"
            android:text="@string/email_exist_alert"
            />
        <EditText
            android:id="@+id/et_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
        <TextView
            android:id="@+id/text_password_alert"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/password_minimal_alert"
            android:textColor="#ff000000"
            />
        <EditText
            android:id="@+id/et_password_confirmation"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            />
        <TextView
            android:id="@+id/text_password_confirmation_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_confirmation_not_match"
            android:textColor="#ff000000"
            />
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            />

        </LinearLayout>
</RelativeLayout>